--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "start": "react-scripts start",     
+    "build": "react-scripts build",      
+    "serve": "serve -s build"             
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2"
   }
 }
