--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^5.1.0"
   },
+    "engines": {
+  "node": "18.x"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
