--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "axios": "^1.11.0",
+    "axios": "^1.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^5.1.0"
   },
   "engines": {
-  "node": "18.x"
-},
-
+    "node": "18.x"
+  },
   "scripts": {
-  "build": "react-scripts build",
-  "start": "node server.js",
+    "build": "react-scripts build",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
