--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.5",
@@ -16,9 +15,9 @@
     "node": "24.x"
   },
   "scripts": {
-    "build": "react-scripts build",
-    "start": "node server.js",
+    "start": "react-scripts start",
     "dev": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
